--- a/src/style.css
+++ b/src/style.css
@@ -1,8 +1,17 @@
 @import "normalize.css";
-body {
-  overflow: hidden;
-  margin: 0;
+
+#root {
+  width: 100%;
+  height: 100%;
 }
-canvas {
-    background: #f9e99e;
+
+.fullWidth {
+  width: 100%;
+}
+.fullHieght {
+  height: 100%;
+}
+.full {
+  width: 100%;
+  height: 100%;
 }
