clone with component props

--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -7,6 +7,7 @@ canvas {
   background-color: #f9e99e;
   background-repeat: no-repeat;
   background-position: center;
+  // background-size: auto 100%;
   width: 100% !important;
   height: 100% !important;
 }
