--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -3,11 +3,11 @@ body {
   margin: 0;
 }
 canvas {
-  // background: url(./bg.jpg);
-  background-color: #f9e99e;
+  background: url(./bg.jpg);
+  background-color: #dfd693;
   background-repeat: no-repeat;
   background-position: center;
-  // background-size: auto 100%;
+  background-size: auto 140%;
   width: 100% !important;
   height: 100% !important;
 }
