--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -3,7 +3,7 @@ body {
   margin: 0;
 }
 canvas {
-  background: url(./bg.jpg);
+  // background: url(./bg.jpg);
   background-color: #dfd693;
   background-repeat: no-repeat;
   background-position: center;
